--- a/Day0423_Thread/readMe
+++ b/Day0423_Thread/readMe
@@ -27,3 +27,22 @@ MultiThread: 병렬처리를 하기 위해 사용한다.
 쓰레드 사용 예 : 작업 처리가 오래 걸릴 때 다른 작업에 영향을 주지 않기 위함 (대기시간 낭비 안하려고)
 
 
+동기화(synchronization)
+왜 문제인가??
+쓰레드는 공통된 메모리 공간에 함께 접근할 수 있음
+자원을 함께 사용하기 때문에 데이터를 주고받을 필요가 없다는 장점이 있지만
+같은 데이터를 사용함으로써 동기화 문제가 발생할 수 있다.
+
+동기화 문제 해결 방법 : 여러 쓰레드가 자원에 한 번에 접근하지 못하게 만들면 됨.
+(임계구역 설정: 다른 쓰레드가 사용 중 일 때, 사용을 금지한다.)
+synchronized 키워드를 사용하고자 하는 메서드에 선언
+
+생산자 - 소비자 문제
+자원의 불균형에 의한 문제가 발생
+동기화 문제를 해결했음에도 생산자가 생산한 데이터를 소비자가 사용하지 못하거나(공급과잉)
+생산자가 데이터를 생산하지 않았는데 소비자는 데이터를 계속해서 사용하는(공급부족)
+문제가 발생할 수 있다.
+
+wait(), notify() 메서드를 사용하여 생산자-소비자 문제를 해결할 수 있다.
+wait(): 쓰레드의 진행을 멈춤
+notifyAll() : 자원을 모두 사용했음을 다른 메소드에게 알려줌
