--- a/Day0425_NetWork/readMe
+++ b/Day0425_NetWork/readMe
@@ -37,9 +37,37 @@ port라는 녀석이 프로그램이 데이터를 받을 수 있게 해준다.
  호스트: 	네트워크에서 최소한 하나의 서비스를 제공하는 노드, IP를 가져야한다.
  		IP를 가지고 있어야 특정 노드로 요청을 보낼 수 있기 때문이다.
 
- IP(Internet Protocol):	32비트 숫자로 이루어진 주소 값.
- 00000000000000000000000000000000의 길이지만 이렇게 표현하면 너무 길기 때문에
- 8비트씩 끊어서 표현한다
- 000000000.000000000.000000000.000000000 (8비트가 표현할 수 있는 숫자는 0~255)
- 그렇기 때문에 IP주소를 보면 192.168.0.1이라던가 210.255.0.1 이런식으로 0~255까지만 표시된다.
+ IP4(Internet Protocol) 주소: 32비트 숫자로 이루어진 주소 값.
+00000000000000000000000000000000의 길이지만 이렇게 표현하면 너무 길기 때문에
+8비트씩 끊어서 표현한다
+000000000.000000000.000000000.000000000 (8비트가 표현할 수 있는 숫자는 0~255)
+그렇기 때문에 IP주소를 보면 192.168.0.1이라던가 210.255.0.1 이런식으로 0~255까지만 표시된다.
  
+ DNS(Domain Name Server):
+223.123.123.12
+www.naver.com ---> 210.86.164.90
+
+ URL(Uniform Resource Locator): 인터넷 상의 자원을 나타내는 약속 (통합자원위치)
+
+ TCP (Transmission Control Protocol): 전화와 비슷
+먼저 통신 대상과 연결을 설정한 이후, 데이터를 주고 받는 형식이다.
+연결을 미리 설정하고 데이터를 보내기 때문에 상대방이 데이터를 받았는지 안받았는지 확인이 가능하다.
+데이터의 손실율이 적음: 신뢰성이 필요한 자료전송, 메일 전송 등에 사용한다.
+
+ UDP (User Datagram Protocol): 편지와 비슷
+데이터의 통신 대상의 주소값을 적어서 보내는 형식.
+데이터 전송 시에는 패킷이라는 단위로 데이터를 쪼개서 전송한다.
+패킷에 목적지 주소를 표시해서 전송:
+미리 연결설정을 하지 않기 때문에 속도가 빠른 장점이있다.
+단, 데이터 유실에 대해서 책임지지 않는다.
+그러므로 데이터의 유실이 많이 중요하지 않은 경우에 사용한다.
+스트리밍 서비스 등에 사용된다.
+
+ UDP채팅
+Sender, Receiver의 역할을 하는 Thread를 각각 만들어서 동시에 실행시켜 주면
+1. Receiver는 데이터를 받아서 화면에 출력한다.
+2. Sender는 계속해서 데이터를 전송한다
+
+
+//내 컴퓨터에서 주소를 지칭하는 'localhost', '127.0.0.1' 
+		//프톰프트 창에서 inconfig -all 하면 ip주소 확인가능.
