--- a/Day0419_Generic/readMe
+++ b/Day0419_Generic/readMe
@@ -17,7 +17,7 @@ Generic
 		클래스 이름<알파벳>, 알파벳은 아무거나 사용 가능(보통은 대문자 T, V, K, E)
 public class Store<T> {						T=type, V=value, k=Key, e=element
 	클래스 안에서는 T를 하나의 타입으로 생각하고 사용하면 된다.
-	특정한 데이터타입을 저장하지 않기 때문에 특정한 타입만 저장하고 싶다면 다른 방식을 사용하는게 나은듯?
+	특정한 데이터타입을 저장하지 않기 때문에 특정한 타입만 저장하고 싶다면 다른 방식을 사용하는게 나을 수도 있긴함
 	(예를 들어 정수 연산을 하려고 했는데 스트링이 들어가 있어서 에러난다거나?)
 }
  
